--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 <body>
     <h1>Sound Fading Based on Player Distance</h1>
     <div id="controls">
+        <button id="startButton">Start Audio</button><br><br>
         <button onclick="movePlayer(-1, 0)">Move Left</button>
-        <button onclick="movePlayer(1, 0)">Move Right</button>
+        <button onclick="movePlayer(1, 0)">Move Right.</button>
         <button onclick="movePlayer(0, -1)">Move Up</button>
         <button onclick="movePlayer(0, 1)">Move Down</button>
         <p>Player Position: <span id="playerPosition">(0, 0)</span></p>
@@ -102,18 +103,22 @@
         let playerPosition = { x: 0, y: 0 }; // Initial player position
         let sounds = [];
 
-        (async () => {
+        document.getElementById('startButton').addEventListener('click', async () => {
+            // Resume audio context to handle autoplay restrictions
+            if (audioContext.state === 'suspended') {
+                await audioContext.resume();
+            }
+
             const soundConfigs = [
                 { url: 'http://www.anycreditcarconnection.net/Jungle01.mp3', position: { x: 10, y: 0 }, radius: 20 },
                 { url: 'http://www.anycreditcarconnection.net/Hounds02.mp3', position: { x: 30, y: 0 }, radius: 15 },
- 		{ url: 'http://www.anycreditcarconnection.net/City01.mp3', position: { x: 50, y: 0 }, radius: 15 },
-		{ url: 'http://www.anycreditcarconnection.net/mob01.mp3', position: { x: 70, y: 0 }, radius: 20 }
-                // Add more sounds here
+                { url: 'http://www.anycreditcarconnection.net/City01.mp3', position: { x: 50, y: 0 }, radius: 15 },
+                { url: 'http://www.anycreditcarconnection.net/mob01.mp3', position: { x: 70, y: 0 }, radius: 20 }
             ];
 
             sounds = await initializeSounds(soundConfigs);
             updatePlayerPositionDisplay();
-        })();
+        });
 
         // Function to update player position
         function movePlayer(dx, dy) {
