--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sound Fading Example</title>
+    <title>Sound Fading Debugging Example</title>
     <style>
         #controls {
             margin: 20px;
@@ -11,25 +11,41 @@
     </style>
 </head>
 <body>
-    <h1>Sound Fading Based on Player Distance</h1>
+    <h1>Sound Fading Based on Player Distance (Debug Mode)</h1>
     <div id="controls">
         <button id="startButton">Start Audio</button><br><br>
-        <button onclick="movePlayer(-1, 0)">Move Left</button>
-        <button onclick="movePlayer(1, 0)">Move Right.</button>
+        <button onclick="movePlayer(-1, 0)">Move Lef.t</button>
+        <button onclick="movePlayer(1, 0)">Move Right</button>
         <button onclick="movePlayer(0, -1)">Move Up</button>
         <button onclick="movePlayer(0, 1)">Move Down</button>
         <p>Player Position: <span id="playerPosition">(0, 0)</span></p>
+        <div id="log" style="white-space: pre-wrap; background: #f0f0f0; padding: 10px; margin-top: 20px; max-height: 200px; overflow-y: auto;"></div>
     </div>
 
     <script>
         // Set up Audio Context
         const audioContext = new (window.AudioContext || window.webkitAudioContext)();
 
+        // Function to log messages
+        function log(message) {
+            console.log(message);
+            const logDiv = document.getElementById('log');
+            logDiv.textContent += message + '\n';
+        }
+
         // Function to load sound
         async function loadSound(url) {
-            const response = await fetch(url);
-            const arrayBuffer = await response.arrayBuffer();
-            return await audioContext.decodeAudioData(arrayBuffer);
+            log(`Loading sound from: ${url}`);
+            try {
+                const response = await fetch(url);
+                const arrayBuffer = await response.arrayBuffer();
+                const decodedData = await audioContext.decodeAudioData(arrayBuffer);
+                log(`Sound loaded successfully: ${url}`);
+                return decodedData;
+            } catch (error) {
+                log(`Error loading sound from ${url}: ${error}`);
+                return null;
+            }
         }
 
         // Sound class to manage each sound source
@@ -45,6 +61,11 @@
 
             // Start playing the sound
             play() {
+                if (!this.buffer) {
+                    log('Buffer is null, cannot play sound.');
+                    return;
+                }
+
                 if (this.source) return; // Prevent multiple starts
 
                 this.source = audioContext.createBufferSource();
@@ -52,6 +73,7 @@
                 this.source.loop = true; // Loop sound if needed
                 this.source.connect(this.gainNode);
                 this.source.start();
+                log(`Playing sound at position (${this.position.x}, ${this.position.y})`);
             }
 
             // Update gain based on player distance
@@ -68,6 +90,7 @@
 
                 // Smoothly adjust the gain
                 this.gainNode.gain.linearRampToValueAtTime(gainValue, audioContext.currentTime + 0.1);
+                log(`Updating gain for sound at (${this.position.x}, ${this.position.y}), distance: ${distance.toFixed(2)}, gain: ${gainValue.toFixed(2)}`);
             }
 
             // Stop the sound
@@ -76,6 +99,7 @@
                     this.source.stop();
                     this.source.disconnect();
                     this.source = null;
+                    log(`Stopped sound at position (${this.position.x}, ${this.position.y})`);
                 }
             }
         }
@@ -107,6 +131,7 @@
             // Resume audio context to handle autoplay restrictions
             if (audioContext.state === 'suspended') {
                 await audioContext.resume();
+                log('Audio context resumed.');
             }
 
             const soundConfigs = [
@@ -117,6 +142,11 @@
             ];
 
             sounds = await initializeSounds(soundConfigs);
+            if (sounds.length > 0) {
+                log('All sounds initialized.');
+            } else {
+                log('No sounds initialized. Check sound URLs and loading process.');
+            }
             updatePlayerPositionDisplay();
         });
 
