--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div id="controls">
         <button id="startButton">Start Audio</button><br><br>
         <button onclick="movePlayer(-1, 0)">Move Left</button>
-        <button onclick="movePlayer(1, 0)">Move Rig.ht</button>
-        <button onclick="movePlayer(0, -1)">Move Up</button>
+        <button onclick="movePlayer(1, 0)">Move Right</button>
+        <button onclick="movePlayer(0, -1)">Move U..p</button>
         <button onclick="movePlayer(0, 1)">Move Down</button>
         <p>Player Position: <span id="playerPosition">(0, 0)</span></p>
         <div id="log" style="white-space: pre-wrap; background: #f0f0f0; padding: 10px; margin-top: 20px; max-height: 200px; overflow-y: auto;"></div>
@@ -89,7 +89,7 @@
                 }
 
                 // Smoothly adjust the gain
-                this.gainNode.gain.linearRampToValueAtTime(gainValue, audioContext.currentTime + 0.1);
+                this.gainNode.gain.setValueAtTime(gainValue, audioContext.currentTime);
                 log(`Updating gain for sound at (${this.position.x}, ${this.position.y}), distance: ${distance.toFixed(2)}, gain: ${gainValue.toFixed(2)}`);
             }
 
@@ -112,6 +112,8 @@
                 const buffer = await loadSound(config.url);
                 const sound = new Sound(buffer, config.position, config.radius);
                 sound.play();
+                // Immediately update gain based on the initial player position
+                sound.updateGain(playerPosition);
                 sounds.push(sound);
             }
 
@@ -135,9 +137,9 @@
             }
 
             const soundConfigs = [
-                { url: 'https://microscopicwindow.github.io/Audio/Jungle01.mp3', position: { x: 10, y: 0 }, radius: 20 },
-                { url: 'https://microscopicwindow.github.io/Audio/Hounds02.mp3', position: { x: 30, y: 0 }, radius: 15 },
-                { url: 'https://microscopicwindow.github.io/Audio/City01.mp3', position: { x: 50, y: 0 }, radius: 15 },
+                { url: 'https://microscopicwindow.github.io/Audio/Jungle01.mp3', position: { x: 10, y: 0 }, radius: 30 },
+                { url: 'https://microscopicwindow.github.io/Audio/Hounds02.mp3', position: { x: 30, y: 0 }, radius: 25 },
+                { url: 'https://microscopicwindow.github.io/Audio/City01.mp3', position: { x: 50, y: 0 }, radius: 35 },
                 { url: 'https://microscopicwindow.github.io/Audio/mob01.mp3', position: { x: 70, y: 0 }, radius: 20 }
             ];
 
